--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Cornell Sun</string>
     <string name="app_heading">The Cornell Daily Sun</string>
     <string name="byline">By %1$s</string>
+    <string name="post_suggested_section_title">Suggested Stories</string>
 </resources>
