Finished Sections and Sections Feed (#7)
* working navigation for sections to sections feed and articles

* Finished Sections and Feed View

* added swipe down to refresh for the sections feed

* fixed issue with titles in sections

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Cornell Sun</string>
     <string name="app_heading">The Cornell Daily Sun</string>
+    <string name="sections_heading">Sections</string>
     <string name="byline">By %1$s</string>
+    <string name="article_days_ago">%1$s DAYS AGO</string>
+    <string name="article_one_day_ago">%1$s DAY AGO</string>
     <string name="post_suggested_section_title">Suggested Stories</string>
 </resources>
