--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
     <string name="app_name">Cornell Sun</string>
     <string name="app_heading">The Cornell Daily Sun</string>
+    <string name="feedback_heading">Send Feedback</string>
+    <string name="contact_heading">Contact Us</string>
+    <string name="history_heading">The Cornell Daily Sun</string>
+    <string name="notifications_heading">Notifications</string>
+    <string name="appteam_heading">App Team</string>
+    <string name="theme_heading">Theme</string>
+    <string name="subscribe_heading">Subscribe</string>
     <string name="sections_heading">Sections</string>
+    <string name="settings_heading">Settings</string>
     <string name="byline">By %1$s</string>
     <string name="article_days_ago">%1$s DAYS AGO</string>
     <string name="article_one_day_ago">%1$s DAY AGO</string>
@@ -12,5 +20,7 @@
     <string name="bottom_nav_sections_text">Sections</string>
     <string name="bottom_nav_feed_text">Feed</string>
     <string name="app_header_search_content_description">Search</string>
+    <string name="newsletters_heading">Daily Newsletters</string>
+    <string name="history_text">The Cornell Daily Sun is an independent, daily student-run newspaper serving the Cornell University and Ithaca, NY, communities. \n\nFounded in 1880, the Sun is the oldest continuously operating college daily in the United States. \n\nThe Sun publishes a print edition on monday, Tuesday, and Thursday during the academic year and is free on newsstands and online. The Sun is staffed entirely by Cornell students, aside from a few full-time production and business positions, and operates out of an office building in downtown Ithaca.</string>
     <string name="search_box_hint">Search</string>
 </resources>
